more file added

--- a/src/app/pages/new-list/new-list.component.html
+++ b/src/app/pages/new-list/new-list.component.html
@@ -4,9 +4,14 @@
       <div class="jumbotron" style="padding:45px 0px">
         <h4 class="text-center">Create New checklist</h4>
       </div>
+      <input type="text" class="form-control" placeholder="Enter Checklist Title Here...." #itemtitle>
+      <br>
+      <br>
       <div class="input-group">
-        <input type="text" class="form-control" #itemTitle>
-        <div class="input-group-addon hover-cursor" (click)="onAdd(itemTitle)">
+
+
+        <input type="text" class="form-control" #items>
+        <div class="input-group-addon hover-cursor" (click)="onAdd(itemtitle,items)">
           <i class="fa fa-plus-circle fa-2x"></i>
         </div>
       </div>
@@ -14,16 +19,17 @@
       <div style="margin:5px 0px">
         <ul class="list-group">
           <li class="list-group-item" *ngFor="let item of toDoListArray">
-            <span class="hover-cursor" [class.text-success]="item.isChecked" (click)="alterCheck(item.$key,item.isChecked)">
+            <!-- <span class="hover-cursor" [class.text-success]="item.isChecked" (click)="alterCheck(item.$key,item.isChecked)">
               <i class="fa fa-lg" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i>
-            </span>
-            {{item.title}}
-            <span class="hover-cursor text-danger pull-right" (click)="onDelete(item.$key)">
+            </span> -->
+            {{item.items}}
+            <!-- <span class="hover-cursor text-danger pull-right" (click)="onDelete(item.$key)">
               <i class="fa fa-trash-o fa-lg"></i>
-            </span>
+            </span> -->
           </li>
         </ul>
       </div>
+
     </div>
   </div>
 </div>
