--- a/src/app/pages/task-view/task-view.component.html
+++ b/src/app/pages/task-view/task-view.component.html
@@ -1,3 +1,18 @@
+<div style="margin:5px 0px">
+  <ul class="list-group">
+    <li class="list-group-item" *ngFor="let item of listarray">
+      <!-- <span class="hover-cursor" [class.text-success]="item.isChecked" (click)="alterCheck(item.$key,item.isChecked)">
+        <i class="fa fa-lg" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i>
+      </span> -->
+      <button (click)="nevigate(item.title)">{{item.title}}</button>
+      <!-- <span class="hover-cursor text-danger pull-right" (click)="onDelete(item.$key)">
+        <i class="fa fa-trash-o fa-lg"></i>
+      </span> -->
+    </li>
+  </ul>
+</div>
+<div>
+
 <div>
   <button routerLink="/new-list">Create New List</button>
 </div>
