pull request added

--- a/src/app/pages/pullrequest/pullrequest.component.html
+++ b/src/app/pages/pullrequest/pullrequest.component.html
@@ -15,7 +15,7 @@
 
       <div style="margin:5px 0px">
         <ul class="list-group">
-          <li class="list-group-item" *ngFor="let item of itemlist">
+          <li class="list-group-item" *ngFor="let item of listarray">
             <span class="hover-cursor" [class.text-success]="item.isChecked" (click)="alterCheck(item.$key,item.isChecked)">
               <i class="fa fa-lg" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i>
             </span>
@@ -27,7 +27,7 @@
         </ul>
       </div>
       <div>
-        <button (click)="onAdd(title)">Submit</button>
+        <button (click)="onAdd(pullname, projectname)">Submit</button>
       </div>
     </div>
   </div>
