all commits are done

--- a/src/app/pages/pullrequest/pullrequest.component.html
+++ b/src/app/pages/pullrequest/pullrequest.component.html
@@ -16,8 +16,10 @@
       <div style="margin:5px 0px">
         <ul class="list-group">
           <li class="list-group-item" *ngFor="let item of listarray">
-            <span class="hover-cursor" [class.text-success]="item.isChecked" (click)="alterCheck(item.$key,item.isChecked)">
-              <i class="fa fa-lg" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i>
+            <!-- <span class="hover-cursor" [class.text-success]="item.isChecked" (click)="alterCheck(item,item.isChecked)"> -->
+              <!-- <i class="fa fa-lg" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i> -->
+              <span>
+              <input type="checkbox" (click)='alterCheck(item)' />
             </span>
             {{item}}
             <span class="hover-cursor text-danger pull-right" (click)="onDelete(item.$key)">
