--- a/src/app/edit-task/edit-task.component.html
+++ b/src/app/edit-task/edit-task.component.html
@@ -2,15 +2,9 @@
   <div class="row">
     <div class="col-md-6 offset-md-3">
       <div class="jumbotron" style="padding:45px 0px">
-        <h4 class="text-center">Create New Pull Request</h4>
-      </div>
-      <div>
-        <input type="text" #pullname placeholder="Add Pull request name..."/><br>
+        <center>View Your Checklist</center>
       </div>
 
-      <div>
-        <input type="text" #projectname placeholder="Add project name..."/>
-      </div>
 
 
       <div style="margin:5px 0px">
@@ -18,20 +12,17 @@
           <li class="list-group-item" *ngFor="let item of listarray">
             <!-- <span class="hover-cursor" [class.text-success]="item.isChecked" (click)="alterCheck(item,item.isChecked)"> -->
               <!-- <i class="fa fa-lg" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i> -->
-              <span>
-              <input type="checkbox" (click)='alterCheck(item)' />
-            </span>
-            {{item}}
+              {{item}}
             <span class="hover-cursor text-danger pull-right" (click)="onDelete(item)">
               <i class="fa fa-trash-o fa-lg"></i>
             </span>
+
           </li>
         </ul>
       </div>
-      <div>
-        <button (click)="onAdd(pullname, projectname)">Submit</button>
-      </div>
+
     </div>
   </div>
 </div>
+
 
