--- a/src/app/pages/new-list/new-list.component.html
+++ b/src/app/pages/new-list/new-list.component.html
@@ -26,7 +26,7 @@
         </ul>
       </div>
       <div>
-        <button (click)="onAdd(title)">Submit</button>
+          <button (click)="onAdd(title)">Create</button>
       </div>
     </div>
   </div>
