--- a/src/app/pages/new-list/new-list.component.html
+++ b/src/app/pages/new-list/new-list.component.html
@@ -22,6 +22,9 @@
             <!-- <span class="hover-cursor text-danger pull-right" (click)="onDelete(item.$key)">
               <i class="fa fa-trash-o fa-lg"></i>
             </span> -->
+            <span class="hover-cursor text-danger pull-right" (click)="onDelete(item)">
+              <i class="fa fa-trash-o fa-lg"></i>
+            </span>
           </li>
         </ul>
       </div>
