--- a/src/app/edit-task/edit-task.component.html
+++ b/src/app/edit-task/edit-task.component.html
@@ -21,6 +21,28 @@
         </ul>
       </div>
 
+      <div class="input-group">
+        <input type="text" class="form-control" #item>
+        <button (click)="makearray(item)">Add</button>
+      </div>
+
+      <div style="margin:5px 0px">
+        <ul class="list-group">
+          <li class="list-group-item" *ngFor="let item of itemlist">
+            <!-- <span class="hover-cursor" [class.text-success]="item.isChecked" (click)="alterCheck(item.$key,item.isChecked)">
+              <i class="fa fa-lg" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i>
+            </span> -->
+            {{item}}
+            <!-- <span class="hover-cursor text-danger pull-right" (click)="onDelete(item.$key)">
+              <i class="fa fa-trash-o fa-lg"></i>
+            </span> -->
+          </li>
+        </ul>
+      </div>
+      <!-- <div>
+          <button (click)="onAdd(title)">Update</button>
+      </div> -->
+
     </div>
   </div>
 </div>
