--- a/src/app/pages/task-view/task-view.component.html
+++ b/src/app/pages/task-view/task-view.component.html
@@ -5,7 +5,8 @@
         <i class="fa fa-lg" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i>
       </span> -->
       <button (click)="nevigate(item.title)">{{item.title}}</button>
-      <button (click)="edit(item.title)">View Task</button>
+      <button (click)="edit(item.title)">Edit Task</button>
+
       <!-- <span class="hover-cursor text-danger pull-right" (click)="onDelete(item.$key)">
         <i class="fa fa-trash-o fa-lg"></i>
       </span> -->
