--- a/src/app/pages/new-list/new-list.component.html
+++ b/src/app/pages/new-list/new-list.component.html
@@ -15,20 +15,17 @@
       <div style="margin:5px 0px">
         <ul class="list-group">
           <li class="list-group-item" *ngFor="let item of itemlist">
-            <!-- <span class="hover-cursor" [class.text-success]="item.isChecked" (click)="alterCheck(item.$key,item.isChecked)">
-              <i class="fa fa-lg" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i>
-            </span> -->
             {{item}}
-            <!-- <span class="hover-cursor text-danger pull-right" (click)="onDelete(item.$key)">
-              <i class="fa fa-trash-o fa-lg"></i>
-            </span> -->
-            <span class="hover-cursor text-danger pull-right" (click)="onDelete(item)">
-              <i class="fa fa-trash-o fa-lg"></i>
-            </span>
+
+            <!-- delete task button -->
+          <span class="hover-cursor text-danger pull-right" (click)="onDelete(item)">
+            <i class="fa fa-trash-o fa-lg"></i>
+          </span>
           </li>
         </ul>
       </div>
       <div>
+        <!-- add checklist button -->
           <button (click)="onAdd(title)">Create</button>
       </div>
     </div>
