--- a/src/app/pages/task-view/task-view.component.html
+++ b/src/app/pages/task-view/task-view.component.html
@@ -1,19 +1,23 @@
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <div class="jumbotron" style="padding:45px 0px">
+        <h4 class="text-center">Dashbord</h4>
+      </div>
+
 <div style="margin:5px 0px">
   <ul class="list-group">
     <li class="list-group-item" *ngFor="let item of listarray">
-      <!-- <span class="hover-cursor" [class.text-success]="item.isChecked" (click)="alterCheck(item.$key,item.isChecked)">
-        <i class="fa fa-lg" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i>
-      </span> -->
+
       <button (click)="nevigate(item.title)">{{item.title}}</button>
       <button (click)="edit(item.title)">Edit Task</button>
 
-      <!-- <span class="hover-cursor text-danger pull-right" (click)="onDelete(item.$key)">
-        <i class="fa fa-trash-o fa-lg"></i>
-      </span> -->
     </li>
   </ul>
 </div>
 <div>
+
 
 <div>
   <button routerLink="/new-list">Create New List</button>
