--- a/src/app/pages/pullrequest/pullrequest.component.html
+++ b/src/app/pages/pullrequest/pullrequest.component.html
@@ -1,3 +1,5 @@
+<!-- page for creating new pull request -->
+
 <div class="container">
   <div class="row">
     <div class="col-md-6 offset-md-3">
@@ -11,13 +13,9 @@
       <div>
         <input type="text" #projectname placeholder="Add project name..."/>
       </div>
-
-
       <div style="margin:5px 0px">
         <ul class="list-group">
           <li class="list-group-item" *ngFor="let item of listarray">
-            <!-- <span class="hover-cursor" [class.text-success]="item.isChecked" (click)="alterCheck(item,item.isChecked)"> -->
-              <!-- <i class="fa fa-lg" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i> -->
               <span>
               <input type="checkbox" (click)='alterCheck(item)' />
             </span>
