--- a/src/app/pull-requests/pull-requests.component.html
+++ b/src/app/pull-requests/pull-requests.component.html
@@ -1,18 +1,13 @@
+<!-- page for viewing created pull requests -->
 
 <div style="margin:5px 0px">
   <ul class="list-group">
     <ul class="list-group-item" *ngFor="let item of listarray">
-      <!-- <span class="hover-cursor" [class.text-success]="item.isChecked" (click)="alterCheck(item.$key,item.isChecked)">
-        <i class="fa fa-lg" [ngClass]="item.isChecked?'fa-check-circle-o':'fa-circle-thin'"></i>
-      </span> -->
       <p><b> Pull Request Name:   {{item.pullRequest_name}}</b></p>
       <p><b> Project Name: {{item.project_name}}</b></p>
       <ul class="list-group-item" *ngFor="let i of item.pullRequest_CheckList | keyvalue">
         <li class="list-group-item" *ngFor="let j of i.value | keyvalue">
-          <!-- <li class="list-group-item **ngFor="let k of i""></li> -->
-        <!-- <div *ngIf="j.value[0]==='t'"><p>Done {{j.value}}</p></div> -->
         {{j.value}}
-        <!-- {{j.value[0][0]}} -->
         </li>
       </ul>
     </ul>
